--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "digital-utopia-backend",
   "version": "1.0.0",
-  "description": "Digital Utopia 2.0 Backend API - Production-ready microservices architecture",
+  "description": "Digital Utopia 2.0 Backend API - Advanced Trading Platform with Portfolio Analytics, Trading Bots, and Professional Order Types",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
@@ -12,8 +12,18 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:trading": "jest --testPathPattern=trading",
+    "test:portfolio": "jest --testPathPattern=portfolio",
+    "test:analytics": "jest --testPathPattern=analytics",
     "db:seed": "node scripts/seed.js",
     "db:reset": "node scripts/reset.js",
+    "portfolio:analyze": "node scripts/portfolio-analyze.js",
+    "portfolio:rebalance": "node scripts/portfolio-rebalance.js",
+    "bots:start": "node scripts/start-bots.js",
+    "bots:stop": "node scripts/stop-bots.js",
+    "bots:status": "node scripts/bots-status.js",
+    "analytics:generate": "node scripts/generate-analytics.js",
+    "analytics:report": "node scripts/analytics-report.js",
     "logs:tail": "firebase functions:log",
     "deploy:functions": "firebase deploy --only functions",
     "deploy:hosting": "firebase deploy --only hosting",
@@ -30,7 +40,17 @@
     "microservices",
     "firebase",
     "nextjs",
-    "typescript"
+    "typescript",
+    "advanced-trading",
+    "portfolio-analytics",
+    "trading-bots",
+    "oco-orders",
+    "iceberg-orders",
+    "trailing-stop",
+    "risk-management",
+    "algorithmic-trading",
+    "technical-analysis",
+    "rebalancing"
   ],
   "author": "MiniMax Agent",
   "license": "MIT",
@@ -79,7 +99,42 @@
     "@types/express": "^4.17.0",
     "winston": "^3.11.0",
     "dotenv": "^16.3.0",
-    "@types/winston": "^2.4.0"
+    "@types/winston": "^2.4.0",
+    // Phase 4: Advanced Trading Features Dependencies
+    "technicalindicators": "^3.1.0",
+    "@types/technicalindicators": "^1.0.0",
+    "mathjs": "^12.0.0",
+    "@types/mathjs": "^6.0.0",
+    "moment": "^2.29.0",
+    "@types/moment": "^2.13.0",
+    "cron": "^3.1.0",
+    "@types/cron": "^2.4.0",
+    "bull": "^4.12.0",
+    "@types/bull": "^4.10.0",
+    "redis": "^4.6.0",
+    "@types/redis": "^4.0.0",
+    "node-cron": "^3.0.0",
+    "ml-matrix": "^6.10.0",
+    "@types/ml-matrix": "^6.10.0",
+    "simple-statistics": "^7.8.0",
+    "@types/simple-statistics": "^7.8.0",
+    "d3": "^7.8.0",
+    "@types/d3": "^7.4.0",
+    "canvas": "^2.11.0",
+    "@types/canvas": "^2.11.0",
+    "pdfkit": "^0.13.0",
+    "@types/pdfkit": "^0.12.0",
+    "html2canvas": "^1.4.0",
+    "@types/html2canvas": "^1.0.0",
+    "jspdf": "^2.5.0",
+    "node-schedule": "^2.1.0",
+    "@types/node-schedule": "^2.1.0",
+    "big.js": "^6.2.0",
+    "@types/big.js": "^6.2.0",
+    "numerical": "^1.2.0",
+    "@types/numerical": "^1.2.0",
+    "random": "^3.0.0",
+    "@types/random": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.0",
@@ -97,7 +152,20 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "@commitlint/cli": "^18.4.0",
-    "@commitlint/config-conventional": "^18.4.0"
+    "@commitlint/config-conventional": "^18.4.0",
+    // Phase 4: Advanced Trading Testing Dependencies
+    "sinon": "^17.0.0",
+    "@types/sinon": "^10.0.0",
+    "chai": "^4.3.0",
+    "@types/chai": "^4.3.0",
+    "mocha": "^10.2.0",
+    "@types/mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "@types/nyc": "^15.1.0",
+    "mock-require": "^3.0.0",
+    "@types/mock-require": "^3.0.0",
+    "benchmark": "^2.1.0",
+    "@types/benchmark": "^2.1.0"
   },
   "engines": {
     "node": ">=18.0.0",
